# sync-PRNG-Rust-NumPy

./: Cargo.toml  README.md
src/: create_file_for_rust.py  main.rs  test_numpy_vs_rust.py  valid_seeds.py
